--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 			}</style><script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script><title>ゴリラの惑星 オンライン飲み会</title></head><body><div class="markdown-body"><h1 id="ゴリラの惑星_オンライン飲み会" onmouseover="this.querySelector('a .fa-link').style.display='inline-block'" onmouseout="this.querySelector('a .fa-link').style.display='none'">ゴリラの惑星 オンライン飲み会<a href="#ゴリラの惑星_オンライン飲み会" title="ゴリラの惑星_オンライン飲み会"><i class="fas fa-link ml-1" style="display:none;"></i></a></h1>
 <h2 id="日時" onmouseover="this.querySelector('a .fa-link').style.display='inline-block'" onmouseout="this.querySelector('a .fa-link').style.display='none'">日時<a href="#日時" title="日時"><i class="fas fa-link ml-1" style="display:none;"></i></a></h2>
 <p>8/14(土) 20:00～</p>
+<h2 id="概要" onmouseover="this.querySelector('a .fa-link').style.display='inline-block'" onmouseout="this.querySelector('a .fa-link').style.display='none'">概要<a href="#概要" title="概要"><i class="fas fa-link ml-1" style="display:none;"></i></a></h2>
+<p>Skypeを使ったオンライン飲み会です！</p>
 <h2 id="参加方法など" onmouseover="this.querySelector('a .fa-link').style.display='inline-block'" onmouseout="this.querySelector('a .fa-link').style.display='none'">参加方法など<a href="#参加方法など" title="参加方法など"><i class="fas fa-link ml-1" style="display:none;"></i></a></h2>
 <ul>
 <li>Skypeアカウントをつくる</li>
@@ -44,4 +46,3 @@
 		  $(document).on("mouseout", "h1,h2,h3,h4,h5", function(e) {
 		    $(e.currentTarget).find(".fa-link").hide();
 		  });</script></html>
-      
