--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
 </ul>
 <h2 id="参加URL" onmouseover="this.querySelector('a .fa-link').style.display='inline-block'" onmouseout="this.querySelector('a .fa-link').style.display='none'">参加URL<a href="#参加URL" title="参加URL"><i class="fas fa-link ml-1" style="display:none;"></i></a></h2>
 <p><a href="https://join.skype.com/xmThQjqkKHRz">https://join.skype.com/xmThQjqkKHRz</a></p>
+<h2 id="Skypeダウンロード先" onmouseover="this.querySelector('a .fa-link').style.display='inline-block'" onmouseout="this.querySelector('a .fa-link').style.display='none'">Skypeダウンロード先<a href="#Skypeダウンロード先" title="Skypeダウンロード先"><i class="fas fa-link ml-1" style="display:none;"></i></a></h2>
+<ul>
+<li><p>iOS</p>
+<ul>
+<li><a href="https://apps.apple.com/jp/app/skype-for-iphone/id304878510">https://apps.apple.com/jp/app/skype-for-iphone/id304878510</a></li>
+</ul>
+</li>
+<li><p>PC(Windows)</p>
+<ul>
+<li><a href="https://www.skype.com/ja/">https://www.skype.com/ja/</a></li>
+</ul>
+</li>
+</ul>
 </div></body><script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js" integrity="sha256-aYTdUrn6Ow1DDgh5JTc3aDGnnju48y/1c8s1dgkYPQ8=" crossorigin="anonymous"></script><script type="text/javascript">hljs.initHighlightingOnLoad();</script><script>
 		  $(document).on("mouseover", "h1,h2,h3,h4,h5", function(e) {
 		    $(e.currentTarget).find(".fa-link").text("🔗").show();
